compilador/src/main/python/compiladorParser.py
# Generated from /home/faq/Documentos/iua/dhs/DHS/compilador/src/main/python/compilador.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class compiladorParser ( Parser ):

    grammarFileName = "compilador.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "';'", "'='", 
                     "','", "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'++'", "'--'", "<INVALID>", "<INVALID>", "'int'", 
                     "'double'", "'if'", "'else'", "'for'", "'while'", "'return'" ]

    symbolicNames = [ "<INVALID>", "PA", "PC", "LLA", "LLC", "PYC", "ASIG", 
                      "COMA", "OPERADORES", "SUMA", "RESTA", "MULT", "DIV", 
                      "MOD", "INC", "DEC", "FLOTANTE", "NUMERO", "INT", 
                      "DOUBLE", "IF", "ELSE", "FOR", "WHILE", "RETURN", 
                      "ID", "WS" ]

    RULE_programa = 0
    RULE_instruccionesOpt = 1
    RULE_instrucciones = 2
    RULE_instruccion = 3
    RULE_bloque = 4
    RULE_cuerpo = 5
    RULE_ireturn = 6
    RULE_incdec = 7
    RULE_iwhile = 8
    RULE_iif = 9
    RULE_ielse = 10
    RULE_incioFor = 11
    RULE_declaracionFor = 12
    RULE_asignacionFor = 13
    RULE_condicionFor = 14
    RULE_incrementoFor = 15
    RULE_ifor = 16
    RULE_prototipo = 17
    RULE_argumentos = 18
    RULE_masParametros = 19
    RULE_parametro = 20
    RULE_argLlamada = 21
    RULE_masArgLlamada = 22
    RULE_funcion = 23
    RULE_llamada = 24
    RULE_declaracion = 25
    RULE_listavar = 26
    RULE_inic = 27
    RULE_tipo = 28
    RULE_asignacion = 29
    RULE_opal = 30
    RULE_comp = 31
    RULE_exp = 32
    RULE_e = 33
    RULE_term = 34
    RULE_t = 35
    RULE_factor = 36
    RULE_condicion = 37

    ruleNames =  [ "programa", "instruccionesOpt", "instrucciones", "instruccion", 
                   "bloque", "cuerpo", "ireturn", "incdec", "iwhile", "iif", 
                   "ielse", "incioFor", "declaracionFor", "asignacionFor", 
                   "condicionFor", "incrementoFor", "ifor", "prototipo", 
                   "argumentos", "masParametros", "parametro", "argLlamada", 
                   "masArgLlamada", "funcion", "llamada", "declaracion", 
                   "listavar", "inic", "tipo", "asignacion", "opal", "comp", 
                   "exp", "e", "term", "t", "factor", "condicion" ]

    EOF = Token.EOF
    PA=1
    PC=2
    LLA=3
    LLC=4
    PYC=5
    ASIG=6
    COMA=7
    OPERADORES=8
    SUMA=9
    RESTA=10
    MULT=11
    DIV=12
    MOD=13
    INC=14
    DEC=15
    FLOTANTE=16
    NUMERO=17
    INT=18
    DOUBLE=19
    IF=20
    ELSE=21
    FOR=22
    WHILE=23
    RETURN=24
    ID=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccionesOpt(self):
            return self.getTypedRuleContext(compiladorParser.InstruccionesOptContext,0)


        def EOF(self):
            return self.getToken(compiladorParser.EOF, 0)

        def getRuleIndex(self):
            return compiladorParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = compiladorParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.instruccionesOpt()
            self.state = 77
            self.match(compiladorParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionesOptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrucciones(self):
            return self.getTypedRuleContext(compiladorParser.InstruccionesContext,0)


        def getRuleIndex(self):
            return compiladorParser.RULE_instruccionesOpt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccionesOpt" ):
                listener.enterInstruccionesOpt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccionesOpt" ):
                listener.exitInstruccionesOpt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccionesOpt" ):
                return visitor.visitInstruccionesOpt(self)
            else:
                return visitor.visitChildren(self)




    def instruccionesOpt(self):

        localctx = compiladorParser.InstruccionesOptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instruccionesOpt)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.instrucciones()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self):
            return self.getTypedRuleContext(compiladorParser.InstruccionContext,0)


        def instrucciones(self):
            return self.getTypedRuleContext(compiladorParser.InstruccionesContext,0)


        def getRuleIndex(self):
            return compiladorParser.RULE_instrucciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrucciones" ):
                listener.enterInstrucciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrucciones" ):
                listener.exitInstrucciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstrucciones" ):
                return visitor.visitInstrucciones(self)
            else:
                return visitor.visitChildren(self)




    def instrucciones(self):

        localctx = compiladorParser.InstruccionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instrucciones)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.instruccion()
                self.state = 84
                self.instrucciones()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.instruccion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(compiladorParser.AsignacionContext,0)


        def declaracion(self):
            return self.getTypedRuleContext(compiladorParser.DeclaracionContext,0)


        def iif(self):
            return self.getTypedRuleContext(compiladorParser.IifContext,0)


        def iwhile(self):
            return self.getTypedRuleContext(compiladorParser.IwhileContext,0)


        def ifor(self):
            return self.getTypedRuleContext(compiladorParser.IforContext,0)


        def bloque(self):
            return self.getTypedRuleContext(compiladorParser.BloqueContext,0)


        def prototipo(self):
            return self.getTypedRuleContext(compiladorParser.PrototipoContext,0)


        def funcion(self):
            return self.getTypedRuleContext(compiladorParser.FuncionContext,0)


        def ireturn(self):
            return self.getTypedRuleContext(compiladorParser.IreturnContext,0)


        def llamada(self):
            return self.getTypedRuleContext(compiladorParser.LlamadaContext,0)


        def PYC(self):
            return self.getToken(compiladorParser.PYC, 0)

        def getRuleIndex(self):
            return compiladorParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = compiladorParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instruccion)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.asignacion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.declaracion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.iif()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 92
                self.iwhile()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 93
                self.ifor()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 94
                self.bloque()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 95
                self.prototipo()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 96
                self.funcion()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 97
                self.ireturn()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 98
                self.llamada()
                self.state = 99
                self.match(compiladorParser.PYC)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLA(self):
            return self.getToken(compiladorParser.LLA, 0)

        def instrucciones(self):
            return self.getTypedRuleContext(compiladorParser.InstruccionesContext,0)


        def LLC(self):
            return self.getToken(compiladorParser.LLC, 0)

        def getRuleIndex(self):
            return compiladorParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = compiladorParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_bloque)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(compiladorParser.LLA)
            self.state = 104
            self.instrucciones()
            self.state = 105
            self.match(compiladorParser.LLC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CuerpoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccionesOpt(self):
            return self.getTypedRuleContext(compiladorParser.InstruccionesOptContext,0)


        def bloque(self):
            return self.getTypedRuleContext(compiladorParser.BloqueContext,0)


        def getRuleIndex(self):
            return compiladorParser.RULE_cuerpo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCuerpo" ):
                listener.enterCuerpo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCuerpo" ):
                listener.exitCuerpo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCuerpo" ):
                return visitor.visitCuerpo(self)
            else:
                return visitor.visitChildren(self)




    def cuerpo(self):

        localctx = compiladorParser.CuerpoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cuerpo)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.instruccionesOpt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.bloque()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IreturnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(compiladorParser.RETURN, 0)

        def opal(self):
            return self.getTypedRuleContext(compiladorParser.OpalContext,0)


        def PYC(self):
            return self.getToken(compiladorParser.PYC, 0)

        def llamada(self):
            return self.getTypedRuleContext(compiladorParser.LlamadaContext,0)


        def getRuleIndex(self):
            return compiladorParser.RULE_ireturn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIreturn" ):
                listener.enterIreturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIreturn" ):
                listener.exitIreturn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIreturn" ):
                return visitor.visitIreturn(self)
            else:
                return visitor.visitChildren(self)




    def ireturn(self):

        localctx = compiladorParser.IreturnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ireturn)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(compiladorParser.RETURN)
                self.state = 112
                self.opal()
                self.state = 113
                self.match(compiladorParser.PYC)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(compiladorParser.RETURN)
                self.state = 116
                self.llamada()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncdecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INC(self):
            return self.getToken(compiladorParser.INC, 0)

        def ID(self):
            return self.getToken(compiladorParser.ID, 0)

        def DEC(self):
            return self.getToken(compiladorParser.DEC, 0)

        def getRuleIndex(self):
            return compiladorParser.RULE_incdec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncdec" ):
                listener.enterIncdec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncdec" ):
                listener.exitIncdec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncdec" ):
                return visitor.visitIncdec(self)
            else:
                return visitor.visitChildren(self)




    def incdec(self):

        localctx = compiladorParser.IncdecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_incdec)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.match(compiladorParser.INC)
                self.state = 120
                self.match(compiladorParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(compiladorParser.ID)
                self.state = 122
                self.match(compiladorParser.INC)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 123
                self.match(compiladorParser.DEC)
                self.state = 124
                self.match(compiladorParser.ID)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 125
                self.match(compiladorParser.ID)
                self.state = 126
                self.match(compiladorParser.DEC)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IwhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(compiladorParser.WHILE, 0)

        def PA(self):
            return self.getToken(compiladorParser.PA, 0)

        def condicion(self):
            return self.getTypedRuleContext(compiladorParser.CondicionContext,0)


        def PC(self):
            return self.getToken(compiladorParser.PC, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(compiladorParser.CuerpoContext,0)


        def getRuleIndex(self):
            return compiladorParser.RULE_iwhile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIwhile" ):
                listener.enterIwhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIwhile" ):
                listener.exitIwhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIwhile" ):
                return visitor.visitIwhile(self)
            else:
                return visitor.visitChildren(self)




    def iwhile(self):

        localctx = compiladorParser.IwhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_iwhile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(compiladorParser.WHILE)
            self.state = 130
            self.match(compiladorParser.PA)
            self.state = 131
            self.condicion()
            self.state = 132
            self.match(compiladorParser.PC)
            self.state = 133
            self.cuerpo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(compiladorParser.IF, 0)

        def PA(self):
            return self.getToken(compiladorParser.PA, 0)

        def condicion(self):
            return self.getTypedRuleContext(compiladorParser.CondicionContext,0)


        def PC(self):
            return self.getToken(compiladorParser.PC, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(compiladorParser.CuerpoContext,0)


        def ielse(self):
            return self.getTypedRuleContext(compiladorParser.IelseContext,0)


        def getRuleIndex(self):
            return compiladorParser.RULE_iif

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIif" ):
                listener.enterIif(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIif" ):
                listener.exitIif(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIif" ):
                return visitor.visitIif(self)
            else:
                return visitor.visitChildren(self)




    def iif(self):

        localctx = compiladorParser.IifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_iif)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(compiladorParser.IF)
            self.state = 136
            self.match(compiladorParser.PA)
            self.state = 137
            self.condicion()
            self.state = 138
            self.match(compiladorParser.PC)
            self.state = 139
            self.cuerpo()
            self.state = 140
            self.ielse()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IelseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(compiladorParser.ELSE, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(compiladorParser.CuerpoContext,0)


        def getRuleIndex(self):
            return compiladorParser.RULE_ielse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIelse" ):
                listener.enterIelse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIelse" ):
                listener.exitIelse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIelse" ):
                return visitor.visitIelse(self)
            else:
                return visitor.visitChildren(self)




    def ielse(self):

        localctx = compiladorParser.IelseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ielse)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.match(compiladorParser.ELSE)
                self.state = 143
                self.cuerpo()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncioForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacionFor(self):
            return self.getTypedRuleContext(compiladorParser.AsignacionForContext,0)


        def declaracionFor(self):
            return self.getTypedRuleContext(compiladorParser.DeclaracionForContext,0)


        def getRuleIndex(self):
            return compiladorParser.RULE_incioFor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncioFor" ):
                listener.enterIncioFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncioFor" ):
                listener.exitIncioFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncioFor" ):
                return visitor.visitIncioFor(self)
            else:
                return visitor.visitChildren(self)




    def incioFor(self):

        localctx = compiladorParser.IncioForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_incioFor)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.asignacionFor()
                pass
            elif token in [16, 18, 19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.declaracionFor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(compiladorParser.TipoContext,0)


        def ID(self):
            return self.getToken(compiladorParser.ID, 0)

        def ASIG(self):
            return self.getToken(compiladorParser.ASIG, 0)

        def opal(self):
            return self.getTypedRuleContext(compiladorParser.OpalContext,0)


        def getRuleIndex(self):
            return compiladorParser.RULE_declaracionFor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionFor" ):
                listener.enterDeclaracionFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionFor" ):
                listener.exitDeclaracionFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionFor" ):
                return visitor.visitDeclaracionFor(self)
            else:
                return visitor.visitChildren(self)




    def declaracionFor(self):

        localctx = compiladorParser.DeclaracionForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_declaracionFor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.tipo()
            self.state = 152
            self.match(compiladorParser.ID)
            self.state = 153
            self.match(compiladorParser.ASIG)
            self.state = 154
            self.opal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(compiladorParser.ID, 0)

        def ASIG(self):
            return self.getToken(compiladorParser.ASIG, 0)

        def exp(self):
            return self.getTypedRuleContext(compiladorParser.ExpContext,0)


        def getRuleIndex(self):
            return compiladorParser.RULE_asignacionFor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacionFor" ):
                listener.enterAsignacionFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacionFor" ):
                listener.exitAsignacionFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacionFor" ):
                return visitor.visitAsignacionFor(self)
            else:
                return visitor.visitChildren(self)




    def asignacionFor(self):

        localctx = compiladorParser.AsignacionForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_asignacionFor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(compiladorParser.ID)
            self.state = 157
            self.match(compiladorParser.ASIG)
            self.state = 158
            self.exp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condicion(self):
            return self.getTypedRuleContext(compiladorParser.CondicionContext,0)


        def getRuleIndex(self):
            return compiladorParser.RULE_condicionFor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicionFor" ):
                listener.enterCondicionFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicionFor" ):
                listener.exitCondicionFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicionFor" ):
                return visitor.visitCondicionFor(self)
            else:
                return visitor.visitChildren(self)




    def condicionFor(self):

        localctx = compiladorParser.CondicionForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_condicionFor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.condicion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncrementoForContext(ParserRuleContext):
        __slots__ = 'parser'
